--- a/clase-1/Merengue/estilosgrid.css
+++ b/clase-1/Merengue/estilosgrid.css
@@ -60,6 +60,18 @@ header nav li{
     
 }
 
+.nav-item:hover{
+    background-color: grey;
+    border-radius: 15px;
+    transition-duration: 1.5s;
+    padding: 10px;
+    font-size: larger;
+}
+
+
+
+
+
 
 header nav li a{
     display: inline;
@@ -104,6 +116,8 @@ header nav li a{
     justify-content: center;
     align-items: center;
 }
+
+
 
 
 .sec1y2 .section2{
