--- a/clase-1/Merengue/estilosgrid.css
+++ b/clase-1/Merengue/estilosgrid.css
@@ -1,6 +1,7 @@
 *{
     margin: 0%;
     padding: 0%;
+    
 }
 
 .estructura-grid{
@@ -27,6 +28,19 @@ header .parte-arriba, nav {
     height: 100%;
     align-items: flex-end;
 }
+
+/* This only changes this particular animation duration */
+.animate__animated.animate__bounce {
+    --animate-duration: 2s;
+  }
+  
+  /* This changes all the animations globally */
+  :root {
+    --animate-duration: 800ms;
+    --animate-delay: 0.9s;
+  }
+
+
 
 header .parte-arriba section{
     display: flex;
@@ -59,6 +73,18 @@ header nav li{
     
     
 }
+
+.nav-item:hover{
+    background-color: grey;
+    border-radius: 15px;
+    transition-duration: 1.5s;
+    padding: 10px;
+    font-size: larger;
+}
+
+
+
+
 
 
 header nav li a{
@@ -105,6 +131,9 @@ header nav li a{
     align-items: center;
 }
 
+
+
+
 .sec1y2 .section2{
     display: flex;
     width: 40%;
@@ -112,12 +141,18 @@ header nav li a{
     align-items: center;
 }
 
+
 .sec1y2 .section1 img, .sec1y2 .section1 p{
+    display: flex;
+    justify-content: center;
     width: 80%;
     padding: 20px;
     margin: 10px 20px 10px 20px;
     background-color: white;
     border-radius: 5px;
+    font-family: 'Oswald', sans-serif;
+    font-size: large;
+    font-weight: bold;
 }
 
 
@@ -130,6 +165,12 @@ header nav li a{
     border-radius: 5px;
     justify-content: space-around;
     
+}
+
+section .section2 p{
+    font-family: 'Oswald', sans-serif;
+    font-size: large;
+    font-weight: bold;
 }
 
 
@@ -146,8 +187,18 @@ header nav li a{
 .section3 img , .section5 img{
     width: 10%;
     border-radius: 50%;
+    
 }
 
+.section5 img:hover{
+    transform: scale(1.100);
+    transition: 1.5s;
+}
+
+.section3 img:hover{
+    transform: scale(1.100);
+    transition: 1.5s;
+}
 
 .section4{
     grid-area: section4;
@@ -288,6 +339,13 @@ footer .sponsors img{
     border-radius: 50%;
 }
 
+footer .sponsors img:hover{
+    transform: scale(1.3);
+    transition: 1.5s;
+}
+
+
+
 footer .pie-de-pagina{
     display: flex;
     justify-content: space-between;
@@ -335,4 +393,3 @@ footer .hashtag{
 
 
 }
-
