cambios antes de entrega2

--- a/clase-1/Merengue/estilosgrid.css
+++ b/clase-1/Merengue/estilosgrid.css
@@ -332,13 +332,18 @@ footer section .bi{
 
 
 
-
-
+    /* PLANTEL */
+    .fondoimagen{
+        background-image:url(./img/fondo.jpg);
+        background-size: 100%;
+    }
 
 
 
 
 /* ---------------------------------- */
+
+
 
 
 /* HISTORIA*/
