--- a/clase-1/Merengue/css/estilosgrid.css
+++ b/clase-1/Merengue/css/estilosgrid.css
@@ -6,29 +6,13 @@
 
 
 
-header { 
-    grid-area: header;
-    display: flex;
-    background-color: white;
-    padding: 20px;
-    position: sticky;
-    width: 100vw;
-
-}
-
-header .parte-arriba, nav {
-    display: flex;
-    width: 100%;
-    height: 100%;
-    align-items: flex-end;
-}
 
 /* This only changes this particular animation duration */
 .animate__animated .animate__bounce {
     --animate-duration: 2s;
   }
   
-  /* This changes all the animations globally */
+/* This changes all the animations globally */
   :root {
     --animate-duration: 800ms;
     --animate-delay: 0.9s;
@@ -36,34 +20,12 @@ header .parte-arriba, nav {
 
 
 
-header .parte-arriba section{
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: flex-start;
-}
-
-header nav ul{
-    display: flex;
-    list-style: none;
-    width: 100%;
-    justify-content: space-around;
-    text-decoration: none;
-    flex-wrap: wrap;
-    
-}
-
 
 
 header nav li{
-    display: inline;
-    text-align: center;
-    margin: 5px;
     font-family: 'Spline Sans Mono', monospace;
     color: black;
-    text-decoration: none;
     font-weight: bolder;    
-    
     
     
 }
@@ -96,10 +58,8 @@ header nav li{
 
 
 header nav li a{
-    display: inline;
-    text-decoration: none;
     font-size: large;
-    color: black;
+    
 }
 
 header nav li a:hover{
@@ -120,12 +80,7 @@ header nav li a:hover{
 
 
 .sec1y2{
-    grid-area: sec1y2;
-    display: flex;
-    justify-content: center;
-    align-items: center;
     background-image: url(../img/fondo.jpg);
-    position: fixed;
     background-size: 100%;
 
 }
@@ -156,33 +111,20 @@ header nav li a:hover{
 
 
 
-.section4 .videoGrande{
-    display: flex;
-    flex-direction: row;
-    flex-wrap: nowrap;
-    margin: 10px;
-}
 
 .section4 .videosSection video{
     width: 30%;
     margin: 10PX;
 }
 
-.section5{
-    grid-area: section5;
-}
 
 .section6{
-    grid-area: section6;
-    display: flex;
-    justify-content: center;
-    align-items: flex-start;
     background-image: url(../img/fondo.jpg);
 
 }
 
 .section6 .spotify, .section6 .twitter{
-    margin: 30px;
+    
     height:70vh;
     width:30vw;
 }
@@ -194,24 +136,11 @@ header nav li a:hover{
 
 }
 
-
-
-
-
-
-
-
-
-
-
-footer{
-    grid-area: footer ;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
+/* Fondo contacto */
+.fondoimagencontacto{
+    background-color: rgba(151, 147, 147, 0.722);
 }
+
 
 footer .sponsorsT{
     background-color: rgb(254, 254, 254);
@@ -219,25 +148,16 @@ footer .sponsorsT{
 }
 
 footer .sponsors{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+
     background-image: url(../img/fondo.jpg);
     background-size: 100%;
-    width: 100%;
+
 }
 
-footer .sponsors .imagenes-sponsors{
-    flex-wrap: wrap;
-    width: 100%;
-    justify-content: space-around;
-    align-items: center;
-}
 
 
 footer .sponsors img{
-    width: 200px;
+
     height: 200px;
     margin: 5%;
     border-radius: 50%;
@@ -253,11 +173,8 @@ footer .sponsors img:hover{
 
 
 footer .pie-de-pagina{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
     background-color: aliceblue;
-    width: 100%;
+
 
 }
 
@@ -266,19 +183,11 @@ footer .fondosponsorspartidos{
     background-color: white;
 }
 
-footer .pie-de-pagina img{
-    width: 30px;
-    height: 30px;
-    border-radius: 50%;
-    margin: 10px;
-}
 
 footer .hashtag{
     font-family: 'Oswald', sans-serif;
     font-size: larger;
     font-weight: bolder;
-    padding: 10px;
-    margin: 5px;
 }
 
 .titulo-sponsors{
