--- a/clase-1/Merengue/css/estilosgrid.css
+++ b/clase-1/Merengue/css/estilosgrid.css
@@ -158,7 +158,6 @@ footer .sponsors{
 
 footer .sponsors img{
 
-    height: 200px;
     margin: 5%;
     border-radius: 50%;
 }
@@ -227,7 +226,7 @@ footer section .bi{
 
 
     .fondorojo{
-        background-color: rgb(237, 149, 149);
+        background-color: #c91b1c;
     }
 
     .partidosmain{
@@ -267,7 +266,7 @@ footer section .bi{
 
 
 
-.navbar{
+header .navbar{
     justify-content: flex-end;
 }
 
