--- a/clase-1/Merengue/css/estilosbootstrap.css
+++ b/clase-1/Merengue/css/estilosbootstrap.css
@@ -9,6 +9,10 @@ header section h2 {
   font-family: "Rubik", sans-serif;
   font-size: xx-large;
 }
+header .navbar {
+  display: flex;
+  justify-content: flex-end;
+}
 header .navbar-light .navbar-nav .nav-link {
   color: white;
 }
@@ -66,6 +70,16 @@ footer .pie-de-pagina .piedepagina-imagenes svg {
   margin: 10px;
 }
 
+@media only screen and (max-width: 992px) {
+  .sponsors section img {
+    height: 50%;
+  }
+}
+@media only screen and (max-width: 500px) {
+  .sponsors section img {
+    height: 50%;
+  }
+}
 main section .reproductor {
   height: 150vh;
   border-radius: 15px;
@@ -103,6 +117,38 @@ main .section4 {
 }
 main .section4 video {
   border: solid 3px black;
+}
+
+.historia .fondoimagenhistoria {
+  background-image: url(../img/juan-copa-blackwhite.jpeg);
+  background-size: 100%;
+}
+.historia .fondoimagenhistoria .animated-year:hover {
+  transition: 1.5s;
+  transform: scale(1.1);
+  background-color: grey;
+}
+
+.yearcolor {
+  background-color: white;
+}
+
+.historia main section section .imghistoria {
+  width: 300px;
+}
+
+@media only screen and (max-width: 992px) {
+  .imgescudodesaparece {
+    display: none;
+  }
+}
+@media only screen and (max-width: 992px) {
+  main .section2 {
+    height: 50%;
+  }
+  main section section p {
+    font-size: smaller;
+  }
 }
 
 /*# sourceMappingURL=estilosbootstrap.css.map */
