--- a/clase-1/Merengue/scss/_footer.scss
+++ b/clase-1/Merengue/scss/_footer.scss
@@ -41,3 +41,31 @@ footer{
 
 
 }
+
+
+
+
+// Media querys footer
+
+@media only screen  and (max-width: 992px) {
+
+
+    
+    .sponsors section img{
+        height: 50% ;
+    }
+
+
+
+}
+
+@media only screen  and (max-width: 500px) {
+
+    
+    .sponsors section img{
+        height: 50% ;
+    }
+
+
+
+}
