--- a/clase-1/Merengue/css/estilosgrid.css
+++ b/clase-1/Merengue/css/estilosgrid.css
@@ -1,58 +1,3 @@
-/* *{
-    margin: 0%;
-    padding: 0%;
-    
-} */
-
-
-
-
-/* This only changes this particular animation duration
-.animate__animated .animate__bounce {
-    --animate-duration: 2s;
-  }
-  
-/* This changes all the animations globally */
-  /* :root {
-    --animate-duration: 800ms;
-    --animate-delay: 0.9s;
-  } */ */
-
-
-
-
-/* 
-header nav li{
-    font-family: 'Spline Sans Mono', monospace;
-    color: black;
-    font-weight: bolder;    
-    
-    
-} */
-
-
-
-/* .nav-item:hover{
-    border-radius: 15px;
-    transition-duration: 1.5s;
-    font-size: larger;
-} */
-
-
-/* @media only screen and (max-width: 992px) {
-    .navbar-collapse {
-        top: 50px;
-        padding: 20px;
-        border-radius: 20px 0px 20px 20px;
-        z-index: 10;
-    }
-
-    .sec1y2{
-        display: flex;
-        flex-direction: row-reverse;
-        background-color: aqua;
-    }
-} */
 
 
 
@@ -222,8 +167,15 @@ footer section .bi{
     /* PARTIDOS */
 
 
+    main section h3{
+        font-style: italic;
+        font-weight: bolder;
+    }
+
+   
+
     .fondorojo{
-        background-color: #c91b1c;
+        background-color: #fefae4;
     }
 
     .partidosmain{
@@ -231,9 +183,6 @@ footer section .bi{
         background-size: 100%;
     }
 
-    /* .rojo{
-        background-color: rgba(222, 118, 118, 0.677);
-    } */
 
 
 
@@ -251,16 +200,6 @@ footer section .bi{
 
 
 
-/* HISTORIA*/
-/* .historia .fondoimagenhistoria{
-    background-image: url(../img/juan-copa-blackwhite.jpeg);
-    background-size: 100%;
-} */
-
-/* .yearcolor{
-    background-color: white;
-} */
-
 
 
 header .navbar{
@@ -272,31 +211,7 @@ header .navbar{
 
 
 
-/* ---------------------------------------- */
 
-/* media query para que se reduzcan los sponsors */
-
-/* @media only screen  and (max-width: 992px) {
-
-    
-    .sponsors section img{
-        height: 50% ;
-    }
-
-
-
-}
-
-@media only screen  and (max-width: 500px) {
-
-    
-    .sponsors section img{
-        height: 50% ;
-    }
-
-
-
-} */
 
 
 /* media query para que el navbar no se encime antes de comprimirse en hamburguesa */
