--- a/clase-1/Merengue/scss/_main.scss
+++ b/clase-1/Merengue/scss/_main.scss
@@ -6,9 +6,9 @@ main{
 
     section{
         .reproductor{
-            height:150vh;
+            height:70vh;
             border-radius: 15px;
-            width:30vw;
+            width:90%;
         }
 
         div{
@@ -54,11 +54,12 @@ main{
     }
 
 
+
 }
 
 .historia{
     .fondoimagenhistoria{
-        background-image: url(../img/juan-copa-blackwhite.jpeg);
+        background-image: url(../../Merengue/img/juan-copa-blackwhite.jpeg);
         background-size: 100%;
             .animated-year{
 
@@ -74,6 +75,7 @@ main{
 
 .yearcolor{
     background-color: white;
+    width: 400px;
 
 }
 
@@ -89,6 +91,15 @@ main{
     }
 }
 
+body{
+    section{
+        .anchotabla{
+            width: 80%;
+        
+        }
+    }
+}
+ 
 
 @media only screen  and (max-width: 992px) {
 
@@ -117,5 +128,11 @@ main{
 
 
 
+}
+
+@media only screen and (max-width: 600px){
+    main .littlevideo{
+        display: none;
+    }
 }
 
