--- a/clase-1/Merengue/css/estilosbootstrap.css
+++ b/clase-1/Merengue/css/estilosbootstrap.css
@@ -42,13 +42,26 @@ header .titulares h2 p {
   font-style: italic;
 }
 
+@media only screen and (max-width: 600px) {
+  header img {
+    width: 50%;
+    padding-bottom: 10px;
+  }
+  header nav {
+    width: 70%;
+  }
+}
+@media only screen and (max-width: 770px) {
+  header section .titular {
+    font-size: large;
+  }
+}
 footer .sponsorsT {
   background-color: white;
   border-top: solid 3px black;
   border-bottom: solid 3px black;
 }
 footer .sponsors img {
-  height: 200px;
   margin: 5%;
   border-radius: 50%;
 }
