--- a/clase-1/Merengue/scss/_header.scss
+++ b/clase-1/Merengue/scss/_header.scss
@@ -78,3 +78,25 @@ header{
 }
 
 
+@media only screen and (max-width: 600px){
+
+
+    header img{
+        width: 50%;
+        padding-bottom: 10px;
+    }
+
+    header nav{
+        width: 70%;
+    }
+}
+
+
+@media only screen and (max-width: 770px){
+    header section .titular{
+        
+        font-size: large
+        
+
+    }
+}
